# ShuTong

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_README.md  PROBLEM_GENERATOR.md  QUICKSTART.md  README.md  UI_UPDATES.md  api_server.py  app.py  check_setup.sh  environment.yml  eval_results.json  main.py  pyproject.toml  start_frontend.sh  test_token_tracking.py  test_tool_call_tokens.py
agent_sys/: README.md  __init__.py  example.py  pipeline.py  state.py  test_pipeline.py  test_problems.json
critic_agent/: README.md  __init__.py  calculator.py  critic.py  state.py  test_calculator.py  test_calculator_integration.py  test_critic_with_tools.py
eval/ProcessBench/: analyze.py  eval_processbench.py  eval_simple_llm.py  intro.py
frontend/: .gitignore  README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: Alert.js  Button.js  Card.js  LatexRenderer.js  Layout.js  LoadingSpinner.js
frontend/src/pages/: AgentSolver.js  Overview.js  ProblemGenerator.js
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
solver_agent/: README.md  __init__.py  example.py  solver.py  state.py
tracker/: IMPLEMENTATION.md  __init__.py  example.py  tracker.py
