[project]
name = "2025-10-21-shutong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "python-dotenv>=1.1.1",
]

[tool.setuptools.packages.find]
include = ["data*", "tracker*", "agent_sys*", "critic_agent*", "solver_agent*"]
