[project]
name = "2025-10-21-shutong"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "python-dotenv>=1.1.1",
    "sympy>=1.12",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "streamlit>=1.28.0",
    "antlr4-python3-runtime==4.11.*",
]

[tool.setuptools.packages.find]
include = ["tracker*", "agent_sys*", "critic_agent*", "solver_agent*"]
